nav z-index fixed

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -43,7 +43,7 @@ header {
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 footer {
